[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probe"
version = "0.1.0"
description = "AI sycophancy detection tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.21",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "sympy>=1.13.0",
    "sentence-transformers>=3.0.0",
    "vaderSentiment>=3.3.2",
    "scipy>=1.14.0",
    "APScheduler>=3.10.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
probe = "probe.main:app"

[tool.hatch.build.targets.wheel]
packages = ["probe"]
